<resources>
    <string name="app_name">ReelNepal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Reel Nepal</string>
    <string name="nav_header_subtitle">reelnepal.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_in">Sign In</string>

    <string name="movie_name">Movie Name</string>
    <string name="name_nepali">Name Nepali</string>
    <string name="released_date">Released Date</string>
    <string name="run_time">Run Time</string>
    <string name="Certificate">Certificate</string>
    <string name="synopsis">Synopsis</string>

    <string name="top_videos">Top Videos</string>
    <string name="latest_videos">Latest Videos</string>

    <string name="this_week_movie">This Week Movie</string>
    <string name="director">Director</string>
    <string name="crews">Crews</string>

    <string name="latest_news">Latest News</string>
    <string name="news_tile">News Title</string>
    <string name="refined_content">Refined Content</string>
    <string name="news_pub_date">News Published Date</string>

    <string name="releasd_month">Released Month</string>
    <string name="releasd_date">Released Date</string>
    <string name="movie_name_in_calender">Movie Name</string>
    <string name="director_in_calender">Director</string>
    <string name="cast">Cast</string>

    <string name="crew_tags">Crew Tags</string>
    <string name="movie_tags">Movie Tags</string>
    <string name="title_activity_sample">SampleActivity</string>

    <string name="facebook_app_id">245506582889826</string>
    <string name="facebook_login_protocol_scheme">fb245506582889826</string>




    <string name="section_format">Hello World from section: %1$d</string>


</resources>
