<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/tools">

    <android.support.v7.widget.CardView
        xmlns:app="http://schemas.android.com/apk/res-auto"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        card_view:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:cardMaxElevation="1dp"

        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/imageView_Calender"
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:scaleType="fitXY"

                android:src="@drawable/ic_launcher_background" />

            <TextView
                android:id="@+id/textView_movie_name_in_calender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_name_in_calender"
                android:layout_toRightOf="@+id/imageView_Calender"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimary"
                android:inputType="textMultiLine"
                android:textSize="20sp"
                android:layout_marginLeft="5dp"
                />

            <TextView
                android:id="@+id/textView_released_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/released_date"
                android:layout_below="@+id/textView_movie_name_in_calender"
                android:layout_toRightOf="@+id/imageView_Calender"
                android:layout_marginTop="10dp"
                android:textColor="#000"
                android:inputType="textMultiLine"
                android:layout_marginLeft="5dp"
                />

            <TextView
                android:id="@+id/textView_director_in_calender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/director_in_calender"
                android:layout_below="@+id/textView_released_date"
                android:layout_toRightOf="@+id/imageView_Calender"
                android:layout_marginTop="5dp"
                android:textColor="#000"
                android:inputType="textMultiLine"
                android:layout_marginLeft="5dp"
                />

            <TextView
                android:id="@+id/textView_cast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cast"
                android:layout_below="@+id/textView_director_in_calender"
                android:layout_toRightOf="@+id/imageView_Calender"
                android:layout_marginTop="5dp"
                android:textColor="#000"
                android:inputType="textMultiLine"
                android:layout_marginLeft="5dp"
                />





        </RelativeLayout>


    </android.support.v7.widget.CardView>







</RelativeLayout>