<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/News_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        app:cardElevation="1dp"
        app:cardMaxElevation="1dp"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/tv_news_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/news_tile"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimary"
                android:inputType="textMultiLine"
                android:layout_marginLeft="5dp"
                android:textSize="20sp">
            </TextView>

            <TextView
                android:id="@+id/tv_refinedContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/refined_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="#000"
                android:inputType="textMultiLine"
                android:layout_marginLeft="5dp"
                />

            <TextView
                android:id="@+id/tv_published_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/news_pub_date"
                android:layout_marginTop="10dp"
                android:textColor="#000"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="5dp"


                />



        </LinearLayout>


    </android.support.v7.widget.CardView>







</RelativeLayout>