<?xml version="1.0" encoding="utf-8"?>

    <android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/content_main"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".MainActivity"
        tools:showIn="@layout/app_bar_main">

        <RelativeLayout
            android:id="@+id/news_details"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <android.support.v7.widget.CardView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/News_details_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            app:cardElevation="1dp"
            app:cardMaxElevation="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_news_details_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/news_tile"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorPrimary"
                    android:inputType="textMultiLine"
                    android:layout_marginLeft="5dp"
                    android:textSize="30sp">
                </TextView>

                <TextView
                    android:id="@+id/tv__news_details_refinedContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/refined_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="#000"
                    android:inputType="textMultiLine"
                    android:layout_marginLeft="5dp"
                    />

                <TextView
                    android:id="@+id/tv_news_details_published_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/news_pub_date"
                    android:layout_marginTop="10dp"
                    android:textColor="#000"
                    android:layout_marginBottom="3dp"
                    android:layout_marginLeft="5dp"
                    />


            </LinearLayout>


        </android.support.v7.widget.CardView>




        <TextView
            android:id="@+id/textview_crew_tags"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/crew_tags"
            android:gravity="center_vertical"
            android:layout_marginTop="20dp"
            android:textColor="#000"
            android:background="#fff"
            android:textSize="20sp"
            android:inputType="textMultiLine"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_below="@+id/News_details_card_view"

            />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView_crew_tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/textview_crew_tags"
            >
        </android.support.v7.widget.RecyclerView>

        <TextView
            android:id="@+id/textview_movie_tags"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/movie_tags"
            android:gravity="center_vertical"
            android:layout_marginTop="20dp"
            android:textColor="#000"
            android:background="#fff"
            android:textSize="20sp"
            android:inputType="textMultiLine"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_below="@+id/recyclerView_crew_tags"
            />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView_movie_tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/textview_movie_tags"
            >
        </android.support.v7.widget.RecyclerView>

        </RelativeLayout>

    </FrameLayout>


</android.support.v4.widget.NestedScrollView>

