<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/nextWeek_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        app:cardElevation="1dp"
        app:cardMaxElevation="1dp"

        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/imageView_NextWeek"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_launcher_background" />

            <TextView
                android:id="@+id/textView_next_week_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/this_week_movie"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:layout_toRightOf="@+id/imageView_NextWeek"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:inputType="textMultiLine"
                android:layout_marginLeft="10dp"
                />

            <TextView
                android:id="@+id/textView_next_week_movie_director"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/director"
                android:layout_toRightOf="@+id/imageView_NextWeek"
                android:layout_below="@+id/textView_next_week_movie"
                android:textColor="#000"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="10dp"

                />

            <TextView
                android:id="@+id/textView_next_week_movie_crews"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/crews"
                android:layout_toRightOf="@+id/imageView_NextWeek"
                android:layout_below="@+id/textView_next_week_movie_director"
                android:textColor="#000"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="10dp"

                />



        </RelativeLayout>


    </android.support.v7.widget.CardView>






</RelativeLayout>